--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,8 +6,10 @@
 }
 
 .main {
-  padding: 4rem 0;
+  padding: 2rem 0;
   flex: 1;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
